Fix for liveness queue when multiple containers are running.

--- a/packages/examples/controller/resources/controller.yaml
+++ b/packages/examples/controller/resources/controller.yaml
@@ -22,6 +22,8 @@ spec:
   selector:
     matchLabels:
       app: queuebernetes-controller
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
