--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "extends": "airbnb",
   "parserOptions": {
-    "ecmaVersion": 8,
+    "ecmaVersion": 2018,
     "sourceType": "module",
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true
@@ -35,6 +35,7 @@
       2,
       "as-needed"
     ],
-    "consistent-return": 0
+    "consistent-return": 0,
+    "max-classes-per-file": 0,
   }
 }
