--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "queuebernetes",
   "description": "Long running job queue for Kubernetes",
-  "version": "0.1.10",
+  "version": "0.2.0",
   "author": "Garrick Meeker",
   "main": "index.js",
   "license": "MIT",
@@ -11,16 +11,17 @@
     "url": "git://github.com/gmeeker/queuebernetes.git"
   },
   "scripts": {
+    "bootstrap": "lerna bootstrap",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "lerna": "^3.4.3"
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "lerna": "^3.22.1"
   },
   "engines": {
     "node": ">=8"
